--- a/Frontend/js/DOM/todo-list/style.css
+++ b/Frontend/js/DOM/todo-list/style.css
@@ -25,6 +25,8 @@
 
 .box{
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 70%;
     justify-content: space-between;
     align-items: center;
@@ -37,7 +39,7 @@
     height: 30px;
 }
 
-#btn{
+button{
     width: 100%;
     height: 30px;
     border-radius: 14px;
