--- a/Frontend/js/DOM/Clock/style.css
+++ b/Frontend/js/DOM/Clock/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,6 +18,8 @@ body {
     border: 8px solid #333;
     border-radius: 50%;
     position: relative;
+    top: 18%;
+    /* left: 40em; */
     background: white;
 }
 
@@ -27,26 +29,40 @@ body {
     height: 2px;
     background: #333;
     top: 50%;
-    transform-origin: 100%;
+    transform-origin: 100% 50%;
     transform: rotate(90deg);
     transition: all 0.05s ease-in-out;
 }
 
 #hour {
-    height: 4px;
+    /* height: 4px;
     width: 35%;
     background: #000;
-   margin-left: 2em;
-
-    transform: rotate(40deg);
-
+    margin-left: 2em;
+    transform: rotate(40deg); */
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    background: #333;
+    top: 50%;
+    transform-origin: 100% 50%;
+    transform: rotate(90deg);
+    transition: all 0.05s ease-in-out;
 }
 
 #minute {
-    height: 3px;
+    /* height: 3px;
     width: 45%;
     background: #666;
-     margin-left: 0.74em;
+    margin-left: 0.74em; */
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    background: #333;
+    top: 50%;
+    transform-origin: 100% 50%;
+    transform: rotate(230deg);
+    transition: all 0.05s ease-in-out;
 }
 
 #second {
@@ -64,4 +80,93 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.numbers {
+    width: 100%;
+    height: 100%;
+    color: aqua;
+    font-size: 20px;
+    text-align: center;
+    position: relative;
+}
+
+.number {
+    background-color: #333;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+}
+
+
+#twelve {
+    position: absolute;
+    top: -1em;
+    left: 4.5em
+}
+
+#one {
+    position: absolute;
+    top: -0.4em;
+    left: 8.2em
+}
+
+#two {
+    position: absolute;
+    top: 1.5em;
+    left: 10em
+}
+
+#three {
+    position: absolute;
+    top: 5em;
+    left: 11.5em
+}
+
+#four {
+    position: absolute;
+    top: 8em;
+    left: 11em;
+}
+
+#five {
+    position: absolute;
+    top: 11em;
+    left: 9.5em;
+}
+
+#six {
+    position: absolute;
+    top: 12.5em;
+    left: 6.2em;
+}
+
+#seven {
+    position: absolute;
+    top: 11em;
+    left: 2.8em;
+}
+
+#eight {
+    position: absolute;
+    top: 8em;
+    left: 1.3em;
+}
+
+#nine {
+    position: absolute;
+    top: 5em;
+    left: 0.5em;
+}
+
+#ten {
+    position: absolute;
+    top: 1.5em;
+    left: 2em;
+}
+
+#eleven {
+    position: absolute;
+    top: -0.4em;
+    left: 3.5em;
 }
